Update CLAUDE.md to reflect the current engine state
The guide still described an early prototype: an evaluator that was mostly
commented out, five vector types, and a handful of operators. That no longer
matches the codebase.

Document the implemented PlanEvaluator and its normalized IR, the full vector
and operator sets, the scalar function registry, the Parquet I/O path, and the
TPC-DS/ClickBench operator harnesses. Correct the build and benchmark commands
for Java 25 and record how datasets are located.